<resources>

    <!-- base -->
    <string name="app_name">Playlist Maker</string>
    <string name="search_button">Поиск</string>
    <string name="library_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="thema_setting">Темная тема</string>
    <string name="teilen_setting">Поделиться приложением</string>
    <string name="support_setting">Написать в поддержку</string>
    <string name="contract_button">Пользовательское соглашение</string>
    <string name="message">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="error_toast_message">на устройстве не найдено приложения для выполнения команды</string>

    <!-- overdraw -->
    <string name="mail_to_support">ovaorange@yandex.ru</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer/</string>

    <!-- track -->
    <string name="artist">No name artist</string>
    <string name="track_title">None</string>
    <string name="track_time">00:00</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="style">Жанр</string>
    <string name="country">Страна</string>

    <!-- search message -->
    <string name="no_interrnet_conection"> Проблемы со связью \n\ \n\ Загрузка не удалась.  Проверьте \n\ подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="repeat">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_search">Вы искали</string>

    <!-- medialibrary -->
    <string name="new_list">Новый плейлист</string>
    <string name="playlist_message">Вы не создали\n\ни одного плейлиста</string>
    <string name="tracks_message">Ваша медиатека пуста</string>
    <string name="my_track">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlists_name">Название*</string>
    <string name="playlists_description">Описание</string>
    <string name="create">Создать</string>
    <string name="new_playlists">Новый плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="creator_alarm_body">Разрешить приложению «Playlist Maker» доступ к фото?</string>
    <string name="kij">Название*</string>
    <string name="positive_button">Завершить</string>
    <string name="negative_button">Отмена</string>
    <string name="back_alert_message">Все несохраненные данные будут потеряны</string>
    <string name="back_alert_title">Завершить создание плейлиста?</string>
    <string name="add_track_message">Добавлено в плейлист </string>
    <string name="add_track_message_false">Трек уже добавлен в плейлист </string>
    <string name="add_playlist_message">Плейлист %s создан</string>
    <string name="delete_playlist_alert_title">Хотите удалить плейлист «%s»?</string>
    <string name="yes_button">Да</string>
    <string name="share_menu_text">Поделиться</string>
    <string name="update_menu_text">Редактировать информацию</string>
    <string name="delete_menu_text">Удалить плейлист</string>
    <string name="delete_track_alert_title">Удалить трек</string>
    <string name="delete_track_alert_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="share_mistake">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="ok">Ок</string>
    <string name="empty_playlist_text">В этом плейлисте нет треков</string>
    <string name="no_button">Нет</string>


    <plurals name="tracksContOfList">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d трекoв</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>