<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".settings.ui.fragments.SettingsFragment">




        <TextView
            style="@style/HeadStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="@dimen/head_padding_vertical"
            android:paddingStart="@dimen/head_padding_start"
            android:text="@string/settings_button"
            />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_theme"
        style="@style/MenuSettingStyle"
        android:layout_marginTop="20dp"
        android:text="@string/thema_setting"
        android:checked="false"
        />

    <TextView
        android:id="@+id/share_button"
        style="@style/MenuSettingStyle"
        android:text="@string/teilen_setting"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:id="@+id/support_button"
        style="@style/MenuSettingStyle"
        android:text="@string/support_setting"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:id="@+id/forward_button"
        style="@style/MenuSettingStyle"
        android:text="@string/contract_button"
        app:drawableEndCompat="@drawable/forward" />
</LinearLayout>
