<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/search_list_padding">

    <ImageView
        android:id="@+id/artwork"
        style="@style/ArtBlock"
        android:layout_width="@dimen/art_item_search"
        android:layout_height="@dimen/art_item_search"
        android:scaleType="fitCenter"
        android:layout_gravity="center_vertical"
        android:layout_marginVertical="@dimen/margin_item_track"
        android:src="@drawable/placeholder" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/margin_item_track"
        android:layout_marginVertical="@dimen/vertical_margin_text_track">

        <TextView
            android:id="@+id/trackName"
            style="@style/FirstContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/track_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artistName"
                style="@style/SecondContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="fill_horizontal"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/artist" />

            <TextView
                android:id="@+id/trackTime"
                style="@style/SecondContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="fill_horizontal"
                android:text="@string/track_time"
                android:drawableStart="@drawable/divider"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/searchArrow"
        style="@style/Arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/arrow_track" />

</LinearLayout>